# skittles

./: .gitignore  Cargo.toml  README.md  package-lock.json
js/: funcs.js
src/: main.rs  routes.rs
static/: index.html  styles.css  styles.css.map  styles.scss
static/pages/: commands.html  index.html
static/styles/: styles.css  styles.css.map  styles.scss
