[package]
name = "skittles"
version = "0.1.0"
authors = ["fate <dhmony-99@hotmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_codegen = "0.4.6"
serde = "1.0.120"
serde_derive = "1.0.120"
serde_json = "1.0"


[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["databases", "json", "serve"]
